# fastapi-views

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.md  Taskfile.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  tox.ini
.github/: release.yaml
.github/workflows/: docs.yaml  release.yaml  tests.yaml
docs/: features.md  index.md  usage.md  utils.md  views.md
docs/reference/: generics.md  views.md  viewsets.md
examples/: app.py
fastapi_views/: __init__.py  cli.py  config.py  enum.py  healthcheck.py  models.py  openapi.py  opentelemetry.py  pagination.py  prometheus.py  response.py  routers.py  schemas.py  serializer.py  settings.py  types.py  utils.py
fastapi_views/errors/: __init__.py  exceptions.py  handlers.py  models.py  utils.py
fastapi_views/views/: __init__.py  api.py  functools.py  generics.py  mixins.py  viewsets.py
features/: index.html
reference/generics/: index.html
reference/views/: index.html
reference/viewsets/: index.html
search/: search_index.json
tests/: conftest.py  test_api_views.py  test_config.py  test_generic_views.py
usage/: index.html
