[tool.poetry]
name = "fastapi-views"
version = "0.0.7"
description = "FastAPI Class Views and utilities"
authors = ["Radzim Kowalow <radzim.kowalow@performance-media.pl>"]
readme = "README.md"
packages = [{include = "fastapi_views"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.95.0"
orjson = ">=3.2.1,<=3.8.9"
uvicorn = "^0.22.0"
uvloop = "^0.17.0"
starlette-exporter = "^0.16"
opentelemetry-instrumentation-fastapi = {version = "^0.39b0", optional = true}

[tool.poetry.extras]
opentelemetry = ["opentelemetry-instrumentation-fastapi"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"
black = "^22.3.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
tox = "^3.25.0"
bandit = "^1.7.4"
python-semantic-release = "^7.33.2"
flake8-cognitive-complexity = "^0.1.0"
httpx = "^0.24.0"
asgi-lifespan = "^2.1.0"
mypy = "^1.2.0"
apscheduler = "^3.10.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.2.1"
mkdocs-autorefs = "^0.4.1"
mkdocs-gen-files = "^0.4.0"
mkdocstrings-python = "^0.8.2"

[tool.pytest.ini_options]
addopts = "--cov=./fastapi_views"
testpaths = [
   "./tests"
]
asyncio_mode = "auto"

[tool.bandit]
skips = ['B101']

[tool.isort]
profile = "black"

[tool.semantic_release]
version_variable = [
    'fastapi_views/_version.py:__version__',
]
version_toml = 'pyproject.toml:tool.poetry.version'
version_pattern = [
    'docs/index.md:Version: (\d+\.\d+\.\d+)',
    'README.md:Version: (\d+\.\d+\.\d+)'
]
upload_to_repository = false
major_on_zero = true
hvcs = "github"
commit_message = "Bump version: {version}"
tag_commit = false

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
no_site_packages = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
